Fix truncated sidebar items

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -3519,6 +3519,9 @@
                     > div {
                         > div.overflow-hidden {
                             overflow: unset;
+                            > div.truncate {
+                                overflow: unset;
+                            }
                         }
                     }
 
